--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Welcome to My Simple</h1>
-    <p>This is a paragraph of text </p>
+    <p>This is a paragraph </p>
 </body>
 </html>
