--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,6 @@
     <title>My Simple Page</title>
 </head>
 <body>
-    <h1>Welcome to My Simple</h1>
-<<<<<<< HEAD
-<<<<<<< HEAD
-    <p>This is a paragraph 2</p>
-=======
-    <p>This is a paragraph </p>
->>>>>>> parent of 5f3f067 (new2)
-=======
-    <p>This is a paragraph of text on my simple webpage.</p>
->>>>>>> parent of 2003e9b (sample1)
+    <h1>Welcome to My Simple1</h1>
 </body>
 </html>
