--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,6 @@
     <title>My Simple Page</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>Welcome to My Simple2</h1>
-=======
-    <h1>Welcome to My Simple</h1>
-    <p>This is a paragraph </p>
->>>>>>> parent of 5f3f067 (new2)
+    <h1>Welcome to My Simple test</h1>
 </body>
 </html>
