--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,6 @@
     <title>My Simple Page</title>
 </head>
 <body>
-    <h1>Welcome to My Simple2 git hub</h1>
+    <h1>Welcome to My Simple2 git hub 2 setup</h1>
 </body>
 </html>
